--- a/Redux/ex02/index.html
+++ b/Redux/ex02/index.html
@@ -3,6 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
+    <div id="root"></div>
     <script src="bundle.js"></script>
 </body>
 </html>
